Temp/DialogEngine/Android/Debug/arm64-v8a/DialogEngine.Android.log
  ANDROID_HOME=C:\\Microsoft\AndroidSDK\25
  ANT_HOME=C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\Apps\apache-ant-1.9.3
  JAVA_HOME=C:\Program Files\Android\jdk\microsoft_dist_openjdk_1.8.0.25
  NDK_ROOT=C:\\Microsoft\AndroidNDK64\android-ndk-r16b
  Minifying JS and checking that ASM/jump table exists for this platform...
  AltPlatformPreBuildTool: running for extension DialogEngine, plat Android:arm64-v8a...
  AltPlatformPreBuildTool: Generated file is up-to-date.
  =========================
  DarkEdif.cpp
  Edif.cpp
  Edif.General.cpp
  Edif.Runtime.cpp
  json.cpp
  ObjectSelection.cpp
  Actions.cpp
  In file included from D:\Github Repos\foster_991\DarkEdif MultiTarget SDK\DialogEngine\Actions.cpp:6:
./Extension.h(5,7): error : redefinition of 'Extension'
  class Extension
        ^
  ./Extension.h(5,7):  note: previous definition is here
  class Extension
        ^
  1 error generated.
